--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Checking out Repo
       uses: actions/checkout@v4
       with:
-        ref: ${{ github.ref }} 
+        fetch-depth: 1
     - name: Listing Repo content
       run: |
         ls -la
