--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,9 +20,10 @@ jobs:
       run: |
         ls -la
         pwd
-    - name: Install JQ
-      uses: dcarbone/install-jq-action@v2.1.0
-    
-    - name: Validate JQ install
+    - name: 'Setup jq'
+      uses: dcarbone/install-jq-action@v2
+    - name: 'Check jq'
+      # language=sh
       run: |
-        jq
+        which jq
+        jq --version
